<resources>
    <string name="app_name">Travel</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="txtHelloWorld">Hello World!!</string>
    <string name="action_settings">Settings</string>
    <string name="next">Next</string>
    <string name="title_activity_sub">SubActivity</string>
    <string name="txtSubActivity">Sub Activity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="designation">B E in Computer Science</string>
    <string name="username">arjunnayak0705</string>
    <string name="listTitle">Title</string>
    <string name="email_id">Email-Id</string>
    <string name="password">Password</string>
    <string name="sign_in">Signin</string>
    <string name="dummy_text">dummy</string>
    <string name="sign_up">Signup</string>
    <string name="title_activity_signup">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="cnfpassword">Confirm Password</string>
    <string name="ph_no">Mobile Number</string>
    <string name="source">Source</string>
    <string name="destination">Destination</string>
    <string name="search_cabs">Search Cabs</string>
</resources>
