<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.arjun.travel.SignupActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <include layout="@layout/appbar"
        android:id="@+id/appbar"/>

    <LinearLayout
        android:id="@+id/layout"
        android:layout_below="@id/appbar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/logo_height"
            android:src="@drawable/android_robot"/>
        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/email_id" />
        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"/>
        <EditText
            android:id="@+id/cnfpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/cnfpassword"
            android:inputType="textPassword"/>
        <EditText
            android:id="@+id/ph_no"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ph_no"
            android:inputType="phone"/>
        <Button
            android:id="@+id/signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_up" />
        <Button
            android:id="@+id/signin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_in" />
    </LinearLayout>
</RelativeLayout>
